Remove main floater because of overflow bug

--- a/src/tpl/css/styles.css
+++ b/src/tpl/css/styles.css
@@ -89,9 +89,9 @@ main {
     width: 100%;
     padding: 1rem 0 0 0;
 
-    display: flex;
+    /*display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: 1;*/
 }
 
 .floater {
@@ -103,8 +103,8 @@ main {
 }
 
 main .floater {
-    display: flex;
-    flex-flow: row wrap;
+    /*display: flex;
+    flex-flow: row wrap;*/
     justify-content: space-between;
 
 }
